Updated bitmaps to look less blurry and more sharp, and updated version to 1.2

--- a/WinTitleBitmaps.csproj
+++ b/WinTitleBitmaps.csproj
@@ -39,5 +39,14 @@
     <Compile Include="BitmapType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="CustomBitmaps\question_mark.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="CustomBitmaps\down.png" />
+    <EmbeddedResource Include="CustomBitmaps\left.png" />
+    <EmbeddedResource Include="CustomBitmaps\right.png" />
+    <EmbeddedResource Include="CustomBitmaps\up.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
